# RegHub_news_signal_analysis

./: .gitignore  README.md  functions_weekly_analysis.py  pyproject.toml  reghub_packages.yml  requirements.txt  run_package_test.ipynb  run_weekly_analysis.py  s3_file_test.ipynb
.github/workflows/: python-publish.yml
1_Exploratory_Data_Analysis/: 1-1_Exploratory_Data_Analysis.ipynb  eda_1_XL.ipynb  eda_1_nm.ipynb  rule_cats.ipynb
2_Data_Preprocessing/: 2-2_labeling_v1.ipynb  2-3_labeling_v2.ipynb  2-4_prompt_creation_v1.ipynb  2-4_prompt_creation_v2.ipynb  2.1_import_data_onedrive.ipynb  2.3_labeling.ipynb  2.4_labeling_updated.ipynb  2.5_labeling_clean.ipynb  Untitled1.ipynb  general_functions.py  import_data_gcp.ipynb
3_Modelling/: 3-1-1_Classification_BERT.ipynb  3-1-2_Classification_RoBERTa.ipynb  3-2-1_Similarity_BERT_MLM.ipynb  3-3-1_LLaMA.ipynb  3-3-3_llama_prompting.ipynb  3-4-1_SpaCy_Named_Entity_Recognition_2.ipynb  BERT.ipynb  BERT_similarity_MLM-Copy1.ipynb  BERT_similarity_analysis.ipynb  RoBERTa.ipynb  Untitled.ipynb  XLNet.ipynb  causal_language_modelling.ipynb  general_functions.py  llama_prompting.ipynb
3_Modelling/backup/: BERT_similarity_MLM.ipynb
4_Weekly_Pipeline/: functions.py  run.py
5_Misc/: Management_Board_Scraping.ipynb  Named Entity Recognition - SpaCy.ipynb  Reddit_API.ipynb  Untitled.ipynb  llama_prompting.ipynb  s3_file_test.ipynb
5_Misc/BERT_similarity/: BERT - Copy.ipynb  BERT_similarity_weight_transfer.ipynb  Untitled1.ipynb  causal_language_modelling1.ipynb
reghub_pack/: Dataset.py  __init__.py  tokenizer.py
(+9 files in other folders)
