[tool.poetry]
name = "reghub-pack"
version = "0.1.2"
description = ""
authors = [
    { name = "Kirtesh", email = "kirteshpatel98@gmail.com" },
    { name = "Nils", email = "author2@example.com" },
    { name = "Xiang", email = "QP3G_2ED@proton.me" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
